ATK available instantly from TAP console